--- a/College Website/AIT WebSite.html
+++ b/College Website/AIT WebSite.html
@@ -9,42 +9,62 @@
 </head>
 <body>
     <div class="bkimage">
-        
-				<img src="image/Dy Patil Logo.png" />
-    <ul class="menu cf">
-        <li><a href="Ait Website.html">HOME</a></li>
-        <li><a href="Ait Website.html">ABOUT</a></li>
-        <li><a href="#">ASSIGNMENT</a>
 
-            <ul class="submenu">
-                <li><a href="svg.html">ASSIGNMENT 1</a></li>
-                <li><a href="svgText.html">ASSIGNMENT 2</a></li>
-                <li><a href="canvas demo.html">ASSIGNMENT 3</a></li>
-                <li><a href="canvas img.html">ASSIGNMENT 4</a></li>
-                <li><a href="Audio-And-VIdeo.html">ASSIGNMENT 5</a></li>
-            </ul>
-        </li>
-        <li><a href="Resume.html">RESUME</a></li>
-    </ul><br>
-    <h2>Dr. D Y Patil School Of Mca </h2>
-            <p>DR D Y Patil School of MCA is a top Institute in Pune, India<br> 
-                offers best Post Graduate program
-               <h1> AFFILIATED TO SAVITRIBAI PHULE
-                  PUNE UNIVERSITY
-                </h1>   <br><br><br><br>
-                <a href="https://dypsomca.com" class="btn">Visit Us to Know More</a>     
-                  
-            </p>
-            <br><br><br><br><br>
-            <h2>About Us</h2>
-            <div class="about">
+        <img src="image/Dy Patil Logo.png" />
+        <ul class="menu cf">
+            <li><a href="Ait Website.html">HOME</a></li>
+            <li><a href="Ait Website.html">ABOUT</a></li>
+            <li><a href="#">ASSIGNMENT</a></li>
+            <li><a href="Resume.html">RESUME</a></li>
+        </ul>
+        <h2>Dr. D Y Patil School Of Mca </h2>
+        <p>DR D Y Patil School of MCA is a top Institute in Pune, India<br>
+            offers best Post Graduate program
+        <h1> AFFILIATED TO SAVITRIBAI PHULE
+            PUNE UNIVERSITY
+        </h1> <br><br><br><br>
+        <a href="https://dypsomca.com" class="btn">Visit Us to Know More</a>
+        <br><br><br>
 
-            <p>Computer Science Student With Excellent Problem-Solving Skills To Perform Well In A Team. <br>
-                <h1>&</h1>
-                Passionate About Coding And Enjoy Learning New Technologies
-            </p>
-            <p>Developer >>  Sagar Mahajan </p>
-            </div>
-        </div>
+        <ul class="menu cf">
+            <li><a href="#">ASSIGNMENT 1</a>
+                <ul class="submenu">
+                    <li><a href="Resume.html">RESUME</a></li>
+                </ul>
+            </li>
+            <li><a href="#">ASSIGNMENT 2</a>
+                <ul class="submenu">
+                    <li><a href="svg.html">SVG</a></li>
+                    <li><a href="svgText.html">SVG Text</a></li>
+                    <li><a href="canvas demo.html">Canvas Demo</a></li>
+                    <li><a href="canvas img.html">Canvas Image</a></li>
+                    <li><a href="Audio-And-VIdeo.html">Audio Video Tag</a></li>
+                </ul>
+            </li>
+            <li><a href="#">ASSIGNMENT 3</a>
+                <ul class="submenu">
+                    <li><a href="svg.html">SVG</a></li>
+                    <li><a href="svgText.html">SVG Text</a></li>
+                    <li><a href="canvas demo.html">Canvas Demo</a></li>
+                    <li><a href="canvas img.html">Canvas Image</a></li>
+                    <li><a href="Audio-And-VIdeo.html">Audio Video Tag</a></li>
+                </ul>
+            </li>
+            <li><a href="#">ASSIGNMENT 4</a></li>
+            <li><a href="#">ASSIGNMENT 5</a></li>
+            <li><a href="#">ASSIGNMENT 6</a></li>
+            <li><a href="#">ASSIGNMENT 7</a></li>
+        </ul>
+        </p>
+        <br><br><br><br><br>
+    </div>
+    <div class="about">
+        <h2>About Us</h2>
+        <p>Computer Science Student With Excellent Problem-Solving Skills To Perform Well In A Team. <br>
+        <h1>&</h1>
+        Passionate About Coding And Enjoy Learning New Technologies
+        </p><br>
+        <p>Developer >> <a>Sagar Mahajan</a></p>
+    </div>
 </body>
 </html>
