--- a/College Website/AIT WebSite.html
+++ b/College Website/AIT WebSite.html
@@ -24,7 +24,7 @@
             PUNE UNIVERSITY
         </h1> <br><br><br><br>
         <a href="https://dypsomca.com" class="btn">Visit Us to Know More</a>
-        <br><br><br>
+        <br><br><br><br><br><br>
 
         <ul class="menu cf">
             <li><a href="#">ASSIGNMENT 1</a>
@@ -56,13 +56,14 @@
             <li><a href="#">ASSIGNMENT 7</a></li>
         </ul>
         </p>
-        <br><br><br><br><br>
+        <br>
     </div>
     <div class="about">
         <h2>About Us</h2>
         <p>Computer Science Student With Excellent Problem-Solving Skills To Perform Well In A Team. <br>
         <h1>&</h1>
-        Passionate About Coding And Enjoy Learning New Technologies
+        <p>
+            Passionate About Coding And Enjoy Learning New Technologies</p>
         </p><br>
         <p>Developer >> <a>Sagar Mahajan</a></p>
     </div>
