--- a/College Website/AIT WebSite.html
+++ b/College Website/AIT WebSite.html
@@ -12,8 +12,8 @@
 
         <img src="image/Dy Patil Logo.png" />
         <ul class="menu cf">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
+            <li><a href="AIT WebSite.html">HOME</a></li>
+            <li><a href="AIT WebSite.html">ABOUT</a></li>
             <li><a href="#">ASSIGNMENT</a></li>
             <li><a href="Resume.html">RESUME</a></li>
         </ul>
